dataset1235/2025-2/1379599236/users/400451609/executions/2277843042_2383239197.log
== SUBMISSION (2025-08-17 12:50:08)
-- CODE: 
a = float(input("Qual a distância entre o observador e a primeira árvore? "))
b = float(input("Qual a distância entre o observador e a segunda árvore? "))
y = float(input("Qual o ângulo entre a e b? "))
y = math.radians(y)

c = math.sqrt(a**2+b**2-2*a*b*math.cos(y))

print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = math.radians(y)
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = math.radians(y)
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = math.radians(y)
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = math.radians(y)
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = math.radians(y)
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = math.radians(y)
        ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-17 13:53:04)
-- CODE: 
import math

a = float(input("Qual a distância entre o observador e a primeira árvore? "))
b = float(input("Qual a distância entre o observador e a segunda árvore? "))
grau = float(input("Qual o ângulo entre a e b? "))

grau = math.radians(grau)

c = math.sqrt(a**2+b**2-2*a*b*math.cos(grau))

print(round(c,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Qual a distância entre o observador e a primeira árvore? Qual a distância entre o observador e a segunda árvore? Qual o ângulo entre a e b? 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Qual a distância entre o observador e a primeira árvore? Qual a distância entre o observador e a segunda árvore? Qual o ângulo entre a e b? 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Qual a distância entre o observador e a primeira árvore? Qual a distância entre o observador e a segunda árvore? Qual o ângulo entre a e b? 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Qual a distância entre o observador e a primeira árvore? Qual a distância entre o observador e a segunda árvore? Qual o ângulo entre a e b? 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Qual a distância entre o observador e a primeira árvore? Qual a distância entre o observador e a segunda árvore? Qual o ângulo entre a e b? 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Qual a distância entre o observador e a primeira árvore? Qual a distância entre o observador e a segunda árvore? Qual o ângulo entre a e b? 9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-17 12:55:08)
-- CODE: 
a = float(input("Qual a distância entre o observador e a primeira árvore? "))
b = float(input("Qual a distância entre o observador e a segunda árvore? "))
grau = float(input("Qual o ângulo entre a e b? "))

grau = math.radians(grau)

c = math.sqrt(a**2+b**2-2*a*b*math.cos(grau))

print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    grau = math.radians(grau)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    grau = math.radians(grau)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    grau = math.radians(grau)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    grau = math.radians(grau)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    grau = math.radians(grau)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    grau = math.radians(grau)
           ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
